@startuml Database Design

!define table(x) entity x << (T,#7A8D3A) >>
!define primary_key(x) <u>x</u>
!define foreign_key(x) #x#

skinparam linetype ortho
skinparam roundcorner 5
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

table(customer) {
    primary_key(id): UUID <<PK>>
    name: VARCHAR(100)
    email: VARCHAR(320)
    --
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

table(auth_google) {
    primary_key(id): UUID <<PK>>
    foreign_key(customer_id): UUID <<FK>>
    sub: TEXT
    --
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

table(magic_link) {
    primary_key(id): UUID <<PK>>
    foreign_key(customer_id): UUID <<FK>>
    token_hash: CHAR(44)
    expires_at: TIMESTAMPTZ
    used_at: TIMESTAMPTZ
    --
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

table(caldav_account) {
    primary_key(id): UUID <<PK>>
    foreign_key(customer_id): UUID <<FK>>
    email: VARCHAR(320)
    username: VARCHAR(320)
    password: TEXT
    --
    created_at: TIMESTAMPTZ
    updated_at: TIMESTAMPTZ
}

' Relationships
customer ||--o| auth_google : has
customer ||--o{ magic_link : uses
customer ||--o{ caldav_account : owns

@enduml